apps/wefewf/wefwef.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wefwef
  namespace: default
  labels:
    app: wefwef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wefwef
  template:
    metadata:
      labels:
        app: wefwef
    spec:
      containers:
      - name: wefwef
        image: ghcr.io/aeharding/wefwef:0.10.4 # {"$imagepolicy": "flux-system:wefwef-image"}
        ports:
        - containerPort: 5314
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 10010
          runAsNonRoot: true
          runAsUser: 10010
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: wefwef-svc
  namespace: default
spec:
  selector:
    app: wefwef
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5314
