apps/wefewf/wefwef-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wefwef-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: wefwef.nohost.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wefwef-svc
            port:
              number: 80
  tls:
  - hosts:
    - wefwef.nohost.network
    secretName: wefwef-cert
